test/domains/bradc/oldExtraCurlies.chpl
var D = {1..3};

for i in {D} do
  writeln(i);
